<resources>
    <string name="app_name">Just Java</string>
    <string name="quantity">Quantity</string>
    <string name="order_number">0</string>
    <string name="button">ORDER</string>
    <string name="price">price</string>
    <string name="dollars">$0</string>
    <string name="orderSummary">Order Summary</string>
    <string name="toppings">toppings</string>
    <string name="Topping1">Whipped Cream</string>
    <string name="Topping2">Chocolate</string>
</resources>
