<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/margin_to_screenSide"
    android:layout_marginTop="@dimen/margin_to_screenSide"
    android:orientation="vertical"
    tools:context="com.example.android.justjava.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_between"
        android:text="@string/toppings"
        android:textAllCaps="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <CheckBox
        android:id="@+id/notify_me_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/score_size"
        android:textAppearance="?android:textAppearanceMedium" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_between"
        android:text="@string/Topping1"
        android:textSize="@dimen/score_size"
        android:layout_marginLeft="24dp"/>

    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="@dimen/margin_between"
        android:text="@string/quantity"
        android:textAllCaps="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/decrement_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="@dimen/margin_between"
            android:layout_marginTop="@dimen/margin_between"
            android:onClick="decrement"
            android:text="-" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_between"
            android:layout_marginLeft="@dimen/margin_between"
            android:layout_marginRight="@dimen/margin_between"
            android:layout_marginTop="@dimen/margin_between"
            android:text="@string/order_number"
            android:textColor="@android:color/black"
            android:textSize="@dimen/score_size" />

        <Button
            android:id="@+id/increment_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="@dimen/margin_between"
            android:layout_marginTop="@dimen/margin_between"
            android:onClick="increment"
            android:text="+" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_between"
        android:layout_marginTop="@dimen/margin_between"
        android:text="@string/orderSummary"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/order_summary_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_between"
        android:layout_marginTop="@dimen/margin_between"
        android:text="@string/dollars"
        android:textColor="@android:color/black"
        android:textSize="@dimen/score_size" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between"
        android:onClick="submitOrder"
        android:text="@string/button" />

</LinearLayout>